fix small title horizontal scroll bug

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -38,7 +38,7 @@ a {
   
   &--small {
     min-height: 35vh;
-    width: 100vw;
+    width: 95vw;
   }
 
   &__image {
